# Rubik_s_cube_project

./: 1darrayRepresentation.cpp  3darrayRepresentation.cpp  BitboardRepresentation.cpp  CMakeLists.txt  GenericRubiksCube.cpp  GenericRubiksCube.h  README.md  main.cpp
Models/: 1darrayRepresentation.cpp  BitboardRepresentation.cpp  GenericRubiksCube.cpp  GenericRubiksCube.h
Models/PatternDatabase/: PatternDatabase.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDFSSolver.h
